--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -1,8 +1,8 @@
-$nav-height : 100px;
+$nav-height : 75px;
 
-$nav-bg : #776B5D;
+$nav-bg : #F3EEEA;
 
-$nav-color : #F3EEEA;
+$nav-color : #776B5D;
 
 $nav-dark-color : #B0A695;
 
