--- a/src/styles/_Hero.scss
+++ b/src/styles/_Hero.scss
@@ -1,34 +1,64 @@
-$hero-color : #EBE3D5;
-
-$font-family : 'Barlow', sans-serif;
-
-
 .main-hero {
 
     width: 100%;
-    height: calc(100% - 100px);
-    cursor: grab;    
+    height: 520px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
-
-    .hero-image {
+    .image-section {
 
         width: 100%;
         height: 100%;
-        background: url('../assets/wallpaperOne.jpg');
-        filter: brightness(0.3);
+        background-image: url('../assets/wallpaperOne.jpg');
         background-position: center;
+        background-size: cover;
+        filter: brightness(0.6);
+        
     }
 
     h1 {
-        
         position: absolute;
-        color: $hero-color;
+        color: $nav-bg;
         font-family: $font-family;
-        font-size: 3.2rem;
+        font-size: 5rem;
         letter-spacing: 1px;
+    }
+
+    .create-own {
+
+        border-radius: 5px;
+        background-color: $nav-bg;
+        width: 720px;
+        height: 150px;
+        position: absolute;
+        bottom: 75px;
+        border: 5px solid $nav-color;
+
+        .title-buttons {
+
+            width: 100%;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+
+            .btn {
+
+                border: none;
+                background-color: transparent;
+                padding: 1rem 2rem;
+                font-size: 1.8rem;
+                letter-spacing: 1px;
+                font-family: $font-family;
+                cursor: pointer;
+
+            }
+            .active {
+
+                border-bottom: 1px solid $nav-dark-color;
+                
+            }
+        }
 
     }
 
