--- a/components/sidebar/styles.module.css
+++ b/components/sidebar/styles.module.css
@@ -1,6 +1,17 @@
 .close {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 0;
+    height: 100%;
+    align-items: center;
+    padding: 0;
+    background-color: #EEEEEE;
+    justify-content: center;
+    transition: width 0.2s ease;
+    overflow: hidden;
 }
+
 .open {
     display: flex;
     flex-direction: column;
@@ -9,9 +20,12 @@
     height: 100%;
     align-items: center;
     padding: 5rem 3.7rem;
-    background-color:#EEEEEE;
+    background-color: #EEEEEE;
     justify-content: center;
+    transition: width 0.2s ease;
 }
+
+
 .header {
     width: 100%;
     display: flex;
@@ -30,6 +44,9 @@
     position: absolute;
     right: 2rem;
     top: 4rem;
+}
+.closed {
+    display: none;
 }
 .closeicon:hover {
     color: #00ADB5;
