--- a/components/header/styles.module.css
+++ b/components/header/styles.module.css
@@ -1,12 +1,11 @@
 .header {
     width: 100%;
-    height: 200px;
+    height: auto;
     padding: 1rem 12rem 0rem 12rem;
     display: grid;
     grid-template-columns: 1fr 100%;    
     border-bottom: 1px solid #a9cbce;
     background-color: #EEEEEE;
-    position:fixed;
 }
 
 .logo {
@@ -102,7 +101,6 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            height: 120px;
         }
         .logo {
             font-size: 4rem;
