--- a/containers/home/styles.module.css
+++ b/containers/home/styles.module.css
@@ -1,5 +1,15 @@
 .home {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    display: grid;
+    grid-template-rows: calc(100vh - 200px) repeat(3,100vh);
+}
+.pageOne {
+    background-color: aqua;
+}
+.pageTwo {
+    background-color: brown;
+}
+.pageThree {
+    background-color: yellow;
 }
