--- a/styles/global.css
+++ b/styles/global.css
@@ -2,3 +2,17 @@ html,body {
     background-color: #EEEEEE;
     font-size: 16px;
 }
+body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 200px auto 600px;
+}
+
+footer {
+    background-color: blue;
+}
+@media screen and (max-width:500px) {
+    body {
+        grid-template-rows: 120px auto 600px;
+    }
+}
