--- a/styles/reset.css
+++ b/styles/reset.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-html,body,main {
+html,body {
     width: 100%;
+    height: 100%;
+    background-color: #EEEEEE;
 }
