--- a/components/sidebar/styles.module.css
+++ b/components/sidebar/styles.module.css
@@ -15,7 +15,7 @@
 .open {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     align-items: center;
