--- a/components/hero/styles.module.css
+++ b/components/hero/styles.module.css
@@ -1,8 +1,53 @@
 .main {
     width: 100%;
-    color: black;
-    background-color: #EEEEEE;
+    background-color: #fff;
+    height: 100%;
+    position: relative;
 }
-.main h1 {
-    color: #222831;
+.item {
+    background-color: rgb(28, 42, 42);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position:center;
+    filter: brightness(0.3);
+}
+
+.buttonsPlace{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.buttonsPlace button {
+    background-color: transparent;
+    color: white;
+    border: none;
+    height: 100%;
+    cursor: pointer;
+    width: 120px;
+}
+.buttonsPlace button:hover {
+    background-color: #fff;
+}
+.name {
+    flex-direction: column;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    color: #fff;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding: 8rem 12rem;
+    font-size: 1.8rem;
 }
