--- a/containers/home/styles.module.css
+++ b/containers/home/styles.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-rows: calc(100vh - 200px) repeat(3,100vh);
+    grid-template-rows: repeat(4,100vh);
 }
 .pageOne {
     background-color: aqua;
