--- a/components/hero/styles.module.css
+++ b/components/hero/styles.module.css
@@ -1,12 +1,11 @@
 .main {
     width: 100%;
-    background-color: #fff;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.596);
     position: relative;
     overflow: hidden;
 }
 .item {
-    background-color: rgb(28, 42, 42);
     width: 100%;
     height: 100%;
     position: relative;
@@ -17,6 +16,7 @@
     object-fit: cover;
     object-position:center;
     filter: brightness(0.3);
+    z-index: -2;
 }
 
 .buttonsPlace{
@@ -40,14 +40,11 @@
     transition: all 0.2s ease;
 }
 .buttonsPlace button:hover {
-    background: rgba(61, 61, 61, 0.136);
     color: rgba(0, 0, 0, 0.553);
 }
 .name {
     flex-direction: column;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    bottom: 0;
     position: absolute;
     color: #fff;
     display: flex;
@@ -55,4 +52,11 @@
     justify-content: flex-end;
     padding: 8rem 12rem;
     font-size: 1.8rem;
+}
+@media screen and (max-width:500px) {
+    .name {
+        font-size: 1.2rem;
+        left: -3rem;
+        bottom: -2rem;
+    }
 }
