--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 html,body {
     background-color: #EEEEEE;
     font-size: 16px;
+        font-family: 'Poppins', sans-serif;
 }
 .container {
     display: grid;
