--- a/components/header/styles.module.css
+++ b/components/header/styles.module.css
@@ -7,6 +7,18 @@
     background-color: #eeeeee17;
     position: fixed;
     z-index: 1;
+    transition: 0.4s ease all;
+}
+.headerWhite {
+    width: 100%;
+    height: 120px;
+    padding: 0rem 12rem 0rem 12rem;
+    display: grid;
+    grid-template-columns: 1fr 100%;    
+    background-color: #222831;
+    position: fixed;
+    z-index: 1;
+    transition: 0.4s ease all;
 }
 .headerSide {
     display: none;
@@ -104,6 +116,12 @@
 
 @media screen and (max-width:500px) {
         .header {
+            padding: 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .headerWhite {
             padding: 2rem;
             display: flex;
             align-items: center;
