--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -2,3 +2,11 @@
     background-color: rgba(0, 0, 0, 0.612);
     height: 100%;
 }
+.body {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
