--- a/app/ui/header/header.css
+++ b/app/ui/header/header.css
@@ -1,6 +1,10 @@
 nav {
     padding: 6rem 20rem 0rem 20rem;
 }
+nav a {
+    text-decoration: none;
+    color: black;
+}
 .nav-logo {
     width: 25%;
     cursor: pointer;
