--- a/app/ui/hero/hero.css
+++ b/app/ui/hero/hero.css
@@ -3,11 +3,30 @@
     height: calc(100vh - 174.400px);
     padding: 0rem 20rem ; 
     width: 100%;
+    position: relative;
 }
-.hero-section img {
+.hero-section .main-image {
+    background-color: rgba(0, 0, 0, 0.141);
     width: 100%;
     height: 100%;
     object-fit: contain;
     object-position: center;
-    border-radius: 50px;
+    border-radius: 5px;
+    filter: brightness(0.8);
+    transition: filter 0.25s ease;
+}
+.hero-section .main-image:hover {
+    filter: brightness(1);
+}
+@media screen and (max-width:500px) {
+    .hero-section {
+        height: calc(100vh - 400px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+    }
+    .hero-section .main-image {
+        width: 95%;
+    }
 }
