--- a/app/ui/header/header.css
+++ b/app/ui/header/header.css
@@ -1,5 +1,8 @@
 nav {
     padding: 5rem 20rem 0rem 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 nav a {
     text-decoration: none;
@@ -19,14 +22,28 @@ nav a {
 .nav-hamburger {
  display: none;       
 }
+.nav-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 25%;
+}
+.nav-list li {
+    list-style: none;
+}
+.nav-list li a {
+    font-size: 1.5rem;
+    font-weight: 1000;
+    letter-spacing: 0.15rem;
+    cursor: pointer;
+}
 
 
 
 
 
 
-
-@media screen and (max-width:500px) {
+@media screen and (max-width:1400px) {
     nav {
         padding: 2rem;
         display: flex;
@@ -45,5 +62,8 @@ nav a {
     }
     .nav-hamburger:hover {
         color: #000;
+    }
+    .nav-list {
+        display: none;
     }
 }
