--- a/app/ui/trends/trends.css
+++ b/app/ui/trends/trends.css
@@ -1,4 +1,39 @@
 .trends {
+    width: 100%;
     height: 100vh;
     padding: 4rem 20rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.product-link {
+    text-decoration: none;
+    color: black;
+    border: 2px solid rgba(128, 128, 128, 0.54);
+    width: 25%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: border 0.25s ease;
+}
+.product-link .product {
+    transition: border 0.25s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 0.2rem;
+}
+.product-link:hover {
+    border : 2px solid black;
+}
+.product img {
+    object-fit: contain;
+    object-position: center;
 }
