--- a/app/ui/trends/trends.css
+++ b/app/ui/trends/trends.css
@@ -37,3 +37,15 @@
     object-fit: contain;
     object-position: center;
 }
+@media screen and (max-width:500px) {
+    .trends {
+        padding: 0;
+        margin-top: 1.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .product-link {
+        width: 55%;
+    }
+}
