--- a/app/ui/trends/trends.css
+++ b/app/ui/trends/trends.css
@@ -1,3 +1,8 @@
+.trends-page {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2.4rem;
+}
 .trends {
     width: 100%;
     height: 100vh;
@@ -8,7 +13,22 @@
     justify-content: space-between;
     gap: 1rem;
 }
-
+.pagination{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 0.45rem;
+}
+.pagination button {
+    padding: 0.75rem;
+    font-size: 1.5rem;
+    font-weight: 1000;
+    background-color: transparent;
+    border: none;
+    color: rgb(150, 150, 227);
+    cursor: pointer;
+}
 .product-link {
     text-decoration: none;
     color: black;
